// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`budget summary component data row group renders 1`] = `
<Fragment>
  <DataRow
    category="combined"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="combined"
    title="Subtotal"
    year="1448"
  />
  <DataRow
    category="contractors"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="contractors"
    title="Contracted Resources"
    year="1448"
  />
  <DataRow
    category="expenses"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="expenses"
    title="Non-Personnel"
    year="1448"
  />
  <DataRow
    category="statePersonnel"
    data={Object {}}
    entries={
      Array [
        10,
        20,
        30,
      ]
    }
    key="statePersonnel"
    title="Project State Staff"
    year="1448"
  />
</Fragment>
`;

exports[`budget summary component data row renders with data 1`] = `
<tr
  className=""
>
  <th
    scope="row"
  >
    title text
  </th>
  <td
    className="budget-table--number"
  >
    <Dollars
      long={false}
    >
      1000
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars
      long={false}
    >
      1
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars
      long={false}
    >
      2
    </Dollars>
  </td>
</tr>
`;

exports[`budget summary component data row renders with no data 1`] = `
<tr
  className=""
>
  <th
    scope="row"
  >
    title text
  </th>
  <td
    className="budget-table--number"
  >
    <Dollars
      long={false}
    >
      0
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars
      long={false}
    >
      0
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars
      long={false}
    >
      0
    </Dollars>
  </td>
</tr>
`;

exports[`budget summary component header row renders 1`] = `
<tr>
  <th
    id="summary-budget-fy-1"
    key="1"
  >
    FFY 
    1
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    Medicaid Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    Federal Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    State Total
  </th>
</tr>
`;

exports[`budget summary component renders correctly 1`] = `
<Fragment>
  <h3
    className="ds-h3"
  >
    HIT Activities
  </h3>
  <table
    className="budget-table"
    key="1"
  >
    <thead>
      <HeaderRow
        yr="1"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hit data",
          ]
        }
        year="1"
      />
    </tbody>
  </table>
  <table
    className="budget-table"
    key="2"
  >
    <thead>
      <HeaderRow
        yr="2"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hit data",
          ]
        }
        year="2"
      />
    </tbody>
  </table>
  <table
    className="budget-table"
    key="total"
  >
    <thead>
      <HeaderRow
        yr="total"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hit data",
          ]
        }
        year="total"
      />
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    HIE Activities
  </h3>
  <table
    className="budget-table"
    key="1"
  >
    <thead>
      <HeaderRow
        yr="1"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hie data",
          ]
        }
        year="1"
      />
    </tbody>
  </table>
  <table
    className="budget-table"
    key="2"
  >
    <thead>
      <HeaderRow
        yr="2"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hie data",
          ]
        }
        year="2"
      />
    </tbody>
  </table>
  <table
    className="budget-table"
    key="total"
  >
    <thead>
      <HeaderRow
        yr="total"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "hie data",
          ]
        }
        year="total"
      />
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    MMIS Activities
  </h3>
  <table
    className="budget-table"
    key="1"
  >
    <thead>
      <HeaderRow
        yr="1"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "mmis data",
          ]
        }
        year="1"
      />
    </tbody>
  </table>
  <table
    className="budget-table"
    key="2"
  >
    <thead>
      <HeaderRow
        yr="2"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "mmis data",
          ]
        }
        year="2"
      />
    </tbody>
  </table>
  <table
    className="budget-table"
    key="total"
  >
    <thead>
      <HeaderRow
        yr="total"
      />
    </thead>
    <tbody>
      <DataRowGroup
        data={Object {}}
        entries={
          Array [
            "mmis data",
          ]
        }
        year="total"
      />
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    Project Activities Totals
  </h3>
  <table
    className="budget-table"
  >
    <thead>
      <tr>
        <th
          id="summary-budget-null1"
        />
        <th
          className="ds-u-text-align--right"
          scope="col"
        >
          Medicaid Total
        </th>
        <th
          className="ds-u-text-align--right"
          scope="col"
        >
          Federal Total
        </th>
        <th
          className="ds-u-text-align--right"
          scope="col"
        >
          State Total
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="1"
      >
        <th
          scope="row"
        >
          FFY 
          1
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            1000
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            1
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            2
          </Dollars>
        </td>
      </tr>
      <tr
        key="2"
      >
        <th
          scope="row"
        >
          FFY 
          2
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            2000
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            10
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            20
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;
